--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -25,10 +25,39 @@
   background-color: $color-grey-light-1;
   padding: 25rem 0;
   padding: 25rem 0 15rem 0;
-  /*margin-top: -10rem;*/
+  margin-top: -12rem; /*-12rem for 1920x1080 screens*/
 }
 
 .section-stories {
   position: relative;
   padding: 15rem 0;
+}
+
+.section-book {
+  padding: 15rem 0;
+  background-image: linear-gradient(
+    to right bottom,
+    $color-primary-light,
+    $color-primary-dark
+  );
+}
+
+.book {
+  background-image: linear-gradient(
+      105deg,
+      rgba($color-white, 0.9) 0%,
+      rgba($color-white, 0.9) 50%,
+      transparent 50%
+    ),
+    url(../img/nat-10-min.jpg);
+  background-size: 100%;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
+
+  height: 50rem;
+
+  &__form {
+    width: 50%;
+    padding: 6rem;
+  }
 }
