--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -19,7 +19,7 @@
 600 ─ 900px:    Tablet portrait
 900 ─ 1200px:   Tablet landscape
 (1200 ─ 1800)   is where normal styles apply
-1800px + :      Tablet portrait
+1800px + :      Big desktop
 
 $breakpoint argument choices:
 ─ phone
