--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -5,11 +5,20 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: rgba($color-black, 0.85);
+  background-color: rgba($color-black, 0.8);
   z-index: 9999;
   opacity: 0;
   visibility: hidden;
   transition: all 0.3s;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+
+  @supports (-webkit-backdrop-filter: blur(10px)) or
+    (backdrop-filter: blur(10px)) {
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background-color: rgba($color-black, 0.3);
+  }
 
   @include respond(tab-land) {
     .btn {
